--- a/BuildSystem/CMakeLists.txt
+++ b/BuildSystem/CMakeLists.txt
@@ -14,7 +14,7 @@ IF (DEBUG)
  SET(COMPILE_OPTIONS "-O0 -g3 -Wall -Werror -fmessage-length=0 -Wno-unused-local-typedefs")
 ELSEIF (RELEASE)
  #SET(COMPILE_OPTIONS "-O2 -g0 -Wall -Werror -fmessage-length=0 -Wno-unused-local-typedefs")
- SET(COMPILE_OPTIONS "-O0 -g -Wall -c -fmessage-length=0")
+ SET(COMPILE_OPTIONS "-O2 -g1 -Wall -c -fmessage-length=0")
 ELSEIF (TEST)
  SET(COMPILE_OPTIONS "-DTESTMODE -O2 -g0 -Wall -Werror -fmessage-length=0 -Wno-unused-local-typedefs")
 ELSE()
